--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   photo_view: ^0.14.0
+  go_router: ^5.1.1
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
