--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
 sdk.dir=/Users/yuta_toba/Library/Android/sdk
-flutter.sdk=/Users/yuta_toba/fvm/versions/3.3.7
+flutter.sdk=/Users/yuta_toba/fvm/versions/stable
