--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   photo_view: ^0.14.0
   go_router: ^5.1.1
   flutter_riverpod: ^2.1.1
+  quiver: ^3.1.0
+  carousel_slider: ^4.1.1
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
