--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   quiver: ^3.1.0
   carousel_slider: ^4.1.1
   card_swiper: ^2.0.4
+  dotted_line: ^3.1.0
+  flutter_svg: ^1.1.6
+  url_launcher: ^6.1.6
+  url_launcher_web: ^2.0.13
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
