--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^1.1.6
   url_launcher: ^6.1.6
   url_launcher_web: ^2.0.13
+  firebase_core: ^2.2.0
 
 dev_dependencies:
   flutter_test:
