#19 create  shusseki page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.1.6
   url_launcher_web: ^2.0.13
   firebase_core: ^2.2.0
+  video_player: ^2.4.7
 
 dev_dependencies:
   flutter_test:
