--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,7 +19,7 @@ jobs:
       # パッケージのダウンロード
       - name: Download Flutter packages
         run: flutter pub get
-      - run: flutter build web
+      - run: flutter run -d chrome --web-renderer html
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
