--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   url_launcher_web: ^2.0.13
   firebase_core: ^2.2.0
   video_player: ^2.4.7
+  flutter_screenutil: ^5.6.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
