git hosting build command changed

--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: true
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter build web --release --web-renderer html --base-href /${{ steps.version.outputs.repository }}/
+      - run: flutter build web --release --base-href="/superpacecalcweb/"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
