--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: true
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter build web --release --base-href="/superpacecalcweb/"
+      - run: flutter build web
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
