git hosting build command changed

--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -3,7 +3,6 @@ name: github pages
 on:
   push:
     branches: [main]
-
   workflow_dispatch:
 
 jobs:
@@ -14,7 +13,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Repository
         id: version
         run: |
@@ -28,10 +26,9 @@ jobs:
           cache: true
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter build web
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - run: flutter build web --web-renderer html --base-href /${{ steps.version.outputs.repository }}/
+      - run: mv build/web docs
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+          publish_dir: ./docs
