--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -3,6 +3,7 @@ name: github pages
 on:
   push:
     branches: [main]
+
   workflow_dispatch:
 
 jobs:
@@ -13,6 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Repository
         id: version
         run: |
@@ -27,9 +29,9 @@ jobs:
       - run: flutter --version
       - run: flutter pub get
       - run: flutter build web --web-renderer html --base-href /${{ steps.version.outputs.repository }}/
-      - run: mv build/web docs
-      - uses: peaceiris/actions-gh-pages@v3
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./docs
+          publish_dir: ./build/web
