--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/about/
+    - assets/icon/
+    - assets/tomony/
+    - assets/shusseki/
+    - assets/pochipochi/
+    - assets/otherworks/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
